mutual fund calc added

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -371,8 +371,8 @@
                 <h5>Investments</h5>
                 <p>Keep Track of your Investments</p>
                 <div class="d-grid gap-2"> <a href="/portfolio"
-                    class="btn btn-outline-info">View Portfolio</a> <a href="/mutualfundcalc"
-                    class="btn btn-outline-info">Mutual Fund return Calculator</a></div>
+                    class="btn btn-outline-info">View Portfolio</a> <a href="/mutualfund"
+                    class="btn btn-outline-info">Mutual Fund Return Calculator</a></div>
               </div>
             </div>
           </div>
@@ -394,6 +394,7 @@
 
   </div>
 </div>
+  </div>
 
   
 
