--- a/views/mutualfund.ejs
+++ b/views/mutualfund.ejs
@@ -85,5 +85,11 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="/js/mutualfundscal.js"></script>
+    
+    
+
   <%- include('partials/footer') %>
   
